# plutus

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  phase-8-12-spec.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_research_core.py  0003_screener_backtests.py  0004_discovery.py  0005_portfolio.py  0006_agent_layer.py  0007_phase7.py  0008_sync_skips.py  0009_bank_investment_terms.py  0010_ops_notification_kinds.py  0011_morning_brief_kind.py
backend/app/: main.py
backend/app/alerts/: __init__.py  evaluate.py
backend/app/analysis/: data.py  indicators.py  metrics.py  resample.py
backend/app/api/: deps.py  router.py
backend/app/backtest/: panel.py  perf.py  runner.py  screen.py  strategy.py
backend/app/briefing/: morning.py
backend/app/core/: config.py  db.py  locks.py  logging.py  security.py
backend/app/discovery/: context.py  engine.py  notify.py  runner.py  schedule.py  signals.py  universe.py
backend/app/exchanges/: __init__.py  base.py  bitso.py  settings_store.py  sync.py
backend/app/health/: __init__.py  aggregate.py  watchdog.py
backend/app/ingestion/: eod.py  fundamentals.py  migrate_crypto_ohlcv.py  news.py  normalize.py  seed.py  universe.py
backend/app/llm/: base.py  budget.py  crypto.py  executor.py  loop.py  mcp_server.py  prompts.py  research.py  settings_store.py  tooldefs.py  translator.py  types.py
backend/app/models/: __init__.py  account.py  agent.py  alert_rule.py  asset.py  asset_metrics.py  asset_note.py  backtest.py  bank_investment.py  discovery.py  (+9 more)
backend/tests/: conftest.py
backend/worker/: celery_app.py  tasks.py
(+228 files in other folders)
