[project]
name = "plutus-backend"
version = "0.1.0"
description = "Plutus investment hub — backend (FastAPI + Celery)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg[binary]>=3.2,<3.4",
    "pydantic-settings>=2.10,<3.0",
    # kombu (celery's transport) hard-caps redis-py at <6.5 — do NOT let redis float to 7/8.x
    "celery[redis]==5.6.3",
    "redis>=6.2,<6.5",
    "httpx==0.28.1",
    "pandas>=2.2,<3.0",
    "structlog>=25.4,<26",
    "pandas-ta-classic>=0.6.52",
    "vectorbt==1.0.0",
    "backtrader==1.9.78.123",
    "quantstats-lumi==1.1.5",
    "cryptography>=49.0.0",
    "jsonschema>=4.26.0",
    "mcp>=1.28.1",
]

[project.scripts]
plutus-mcp = "app.llm.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "fakeredis[lua]>=2.30",
    "ruff>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires docker compose db + redis on localhost",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# B008: Depends()/Query() in defaults is the FastAPI idiom
"app/api/**" = ["B008"]
# E402: integration conftest must pin env vars before app imports
"tests/integration/conftest.py" = ["E402"]
